--- a/PROJETO INTEGRADOR/CSS/estilo.css
+++ b/PROJETO INTEGRADOR/CSS/estilo.css
@@ -333,7 +333,7 @@ nav ul li a span.rotate{
     color: black;
     width: 400px ;
     height: 300px;
-    text-align: justify;  
+    text-align: center;  
     /*border: 2px #8871a7 solid;*/
    
 }
@@ -542,7 +542,7 @@ form .botao{
 }*/
 
 ul li span{
-    color: #e00;
+    color: #832a95;
     padding: 3px 3px;
     /*border: solid #000;*/
 }
