--- a/PROJETO INTEGRADOR/CSS/perfil.css
+++ b/PROJETO INTEGRADOR/CSS/perfil.css
@@ -209,6 +209,10 @@ img{
    .card>div {
     padding: 2rem;
 }
+    .card h3 {
+    margin-bottom: 2rem;
+    color: #832a95;
+}
 
 .card:nth-child(even) img {
  order: 2;
