--- a/PROJETO INTEGRADOR/CSS/cadastro.css
+++ b/PROJETO INTEGRADOR/CSS/cadastro.css
@@ -11,6 +11,10 @@
 
 .cad{
     color: #2b81bc;
+    text-transform: uppercase;
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
 }
 
 .titulo{
@@ -18,6 +22,8 @@
     font-size: 40px;
     font-family: 'Roboto Slab', serif;
     color: #8871a7;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 .logo{
     text-align: center;
@@ -36,7 +42,7 @@ ul li {
     margin: 5px 0;
 }
 header {
-    /*background: #f3f3f5;*/
+    background: #f3f3f5;
     padding: 1rem;
     text-align: center;
 
@@ -98,5 +104,6 @@ header {
     background: #fff;
     color: red;
 }
+
 
 /***************************************FIM Do Cadastro****************************************************************/
