--- a/PROJETO INTEGRADOR/CSS/estilo.css
+++ b/PROJETO INTEGRADOR/CSS/estilo.css
@@ -203,7 +203,7 @@ nav ul li a span.rotate{
 }
 
 .conhecaAcervo h1{
-    color: #0000FF;
+    color: #832a95;
     font-size: 28px;
     text-transform: uppercase;
     font-weight: 550;
@@ -226,7 +226,7 @@ nav ul li a span.rotate{
 
 .container h1{
     text-align: center;
-    color: #832A95;
+    color: #2b81bc;
     font-size: 28px;
     text-transform: uppercase;
     font-weight: 550;
@@ -271,6 +271,7 @@ nav ul li a span.rotate{
     padding: 20px 200px 40px 200px;
     background-color: #f5f5f5 ;
     margin-top: -30px;
+    text-align: center;
 }
 
 .diversosLivros h1{
@@ -289,23 +290,21 @@ nav ul li a span.rotate{
 }
 
 .diversosTxt button{
-    background-color: #832A95;
+    background-color: #049C9A;
     padding: 7px 25px 7px 25px;
     border: none;
     border-radius: 60px ;
-    color: white;
-    
+    color: white; 
 }
 
 .diversosTxt button a, .txtLivro a{
     text-decoration: none;
-    color: white;
-    
+    color: white;  
 }
 
 .diversosTxt button:hover{
-    background-color: #0000FF;
-    transition: all 0.3s;
+    background-color: #832A95;
+    transition: all 0.3s; 
 }
 
 .diversosImg{
@@ -314,7 +313,7 @@ nav ul li a span.rotate{
 
 /******************************************Fim da infomações sobre o site*******************************************/
 
-/*****************************Inicio do corpo sobre nós******************************************************/
+/*********************************************Inicio do corpo sobre nós*********************************************/
 
 .container div{
     padding: 10px;
@@ -454,7 +453,7 @@ h4 {
 
 .flex2 > div{
     flex: 1 1 200px;
-    margin: 10px;
+    margin: 33px;
 }
 
 /******************************************Fim dos Responsaveis******************************************************/
@@ -553,7 +552,7 @@ ul li span{
     color: red;
 }
 
-/**************************Fim Parte Conato/ Sugestões***************************************************/
+/**************************************Fim Parte Conato/ Sugestões***************************************************/
 
 /************************************************Inicio Rodapé******************************************************/
 .rodape {
