--- a/PROJETO INTEGRADOR/CSS/perfil.css
+++ b/PROJETO INTEGRADOR/CSS/perfil.css
@@ -173,18 +173,39 @@ nav ul li a span.rotate{
     text-align: center;
     color: #049C9A;
     margin-top: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
-img{
-    max-width: 100%;
+/*main{
+    background-image: url(../Img/“Quando\ tiver\ que\ escolher\ entre\ estar\ certo\ e\ ser\ gentil\,\ escolha\ ser\ gentil”.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 810px;
+    height: 810px;
+    
+}*/
+.nome{
+    text-transform: uppercase;
+     font-weight: bold;
+     font-size: 28px;
+     margin: 40px;
+     margin-top: 0;
+}
+
+.banner{
+    /*max-width: 100%;*/
     display: block;
+    margin: 5px;
+    padding: 5px;
 }
 
 .flexbox{
     display: flex;
     flex-wrap: wrap;
-    max-width: 800px;
-    margin: 0 auto;
+    /*max-width: 800px;
+    margin: 0 auto;*/
        
 }
 
@@ -211,7 +232,9 @@ img{
 }
     .card h3 {
     margin-bottom: 2rem;
-    color: #832a95;
+    color: #2b81bc ;
+    font-weight: bold;
+    text-align: center;
 }
 
 .card:nth-child(even) img {
